Fixed so the page doesnt jump

--- a/src/app.scss
+++ b/src/app.scss
@@ -5,6 +5,10 @@ $textColorLight: #808080;
 
 body {
   background: white;
+
+}
+.container-width {
+  min-height: 100vh;
 }
 
 h1 {
